client/projects/hybrid/src/app/notification/child-components/notification/notification.component.scss
@import "../../../../../../web/src/app/notification-shared/child-components/notification/notification.component.scss";

.notification-container {
  --inner-padding-start: 4px;
  --inner-padding-end: 6px;
  --inner-padding-top: 4px;
  --inner-padding-bottom: 8px;
  --background: var(--ion-color-step-150);

  &.unread {
    --background: var(--ion-color-step-50);
  }
}

.notification {
  margin-left: 0;
  padding-right: 0;
  background-color: inherit;

  ion-label {
    display: block;
  }

  .title {
    color: var(--ion-color-tertiary);
    margin-bottom: 0;
  }

  .subtitle {
    color: var(--ion-placeholder-color);
  }

  .body {
    color: var(--ion-text-color);

    ::ng-deep br + i {
      display: block;
      margin-top: 3px;
      color: var(--ion-placeholder-color);
      font-weight: bold;
    }
  }
}

:host-context(body.dark) {
  .notification .title {
    color: var(--ion-color-primary);
  }
}

.flagged-indicator {
  color: var(--ion-placeholder-color);

  &.flagged {
    color: var(--ion-color-receiver);
  }
}

